share & external database backup/restore

--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,8 @@
                            <input type="file" id="restoreFile" accept=".db" aria-label="Restore database file">
                            <button id="restoreDbBtn">Restore from File</button>
                         </div>
+                        <button id="share-backup-btn" class="backup-btn" style="display: none;">Share Database</button>
+                        <a href="https://drive.google.com" target="_blank" rel="noopener noreferrer" class="backup-btn">External Database</a>
                      </div>
                      <div id="restoreStatus"></div>
                   </div>
