--- a/public/index.html
+++ b/public/index.html
@@ -166,6 +166,15 @@
                      </div>
                      <div id="restoreStatus"></div>
                   </div>
+                  <div class="rclone-sync-section">
+                     <h4>Rclone Sync</h4>
+                     <p>Sync your database with your cloud storage using rclone.</p>
+                     <div class="rclone-sync-controls">
+                        <button id="rcloneDownloadBtn" class="rclone-btn">Download from Cloud</button>
+                        <button id="rcloneUploadBtn" class="rclone-btn">Upload to Cloud</button>
+                     </div>
+                     <div id="rcloneStatus"></div>
+                  </div>
                </div>
             </div>
 				<div id="player-page" class="page" style="display: none;">
