--- a/react-frontend/index.html
+++ b/react-frontend/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ani-web</title>
+    <style>
+      body {
+        background-color: #1a1a1a; /* Dark background for initial load */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
