--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ani-web</title>
     <style>
       body {
-        background-color: #1a1a1a; /* Dark background for initial load */
+        background-color: #1a1a1a;
       }
     </style>
   </head>
