--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Watch your favorite anime series online. Track your progress, discover new shows, and enjoy seamless streaming." />
   <title>ani-web</title>
   <link rel="preconnect" href="https://lh3.googleusercontent.com">
   <link rel="preconnect" href="https://wp.youtube-anime.com">
