--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,9 @@
   <meta name="description"
     content="Watch your favorite anime series online. Track your progress, discover new shows, and enjoy seamless streaming." />
   <title>ani-web</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://lh3.googleusercontent.com">
   <link rel="preconnect" href="https://wp.youtube-anime.com">
   <link rel="dns-prefetch" href="https://lh3.googleusercontent.com">
